--- a/resources/public/css/page.css
+++ b/resources/public/css/page.css
@@ -7,6 +7,7 @@ body {
 article {
   border: 1px #4e4e4e dotted;
   padding: 1em;
+  margin-bottom: 1em;
 }
 /* clearfix */
 article:before, article:after {
@@ -23,6 +24,12 @@ article h1 {
 }
 
 /* 101 */
-#article-101 #inputs {
+#tutorial-101 #inputs {
     float: left;
+}
+
+#pacman canvas {
+    border: 1px black solid;
+    width: 600px;
+    height: 600px;
 }
